<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jhzy.receptionevaluation.ui.fragment.DrugFragment"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="27.8dp">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/btnDispense"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="350dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/selector_radius_10">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_peiyao"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnDispenseTitle"
                android:layout_marginTop="15dp"
                android:textSize="18sp"
                android:textColor="@color/color_black_333333"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/btnDelivery"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="350dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/selector_radius_10"
            android:layout_marginLeft="30dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_fayao"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnDeliveryTitle"
                android:layout_marginTop="15dp"
                android:textSize="18sp"
                android:textColor="@color/color_black_333333"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        >
        <LinearLayout
            android:id="@+id/btnInsulin"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="350dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/selector_radius_10">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_yds"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnInsulinTitle"
                android:layout_marginTop="15dp"
                android:textSize="18sp"
                android:textColor="@color/color_black_333333"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="350dp"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginLeft="30dp"
            >
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
