<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.jhzy.receptionevaluation.ui.dispensingdrug.DispenseMainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingRight="15dp"
        android:background="@color/colorAccent">

        <ImageView
            android:id="@+id/imBeforeMealBack0"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="15dp"
            android:paddingRight="10dp"
            android:src="@mipmap/back" />

        <TextView
            android:id="@+id/txtBeforeMealWinTitle0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/beforeMeal"
            android:textColor="@android:color/white"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/imDateDown0"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_alignParentRight="true"
            android:drawablePadding="8dp"
            android:text="5月8日"
            android:layout_centerVertical="true"
            android:drawableRight="@mipmap/icon_main_down"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="14dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="14dp">


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/etSearchDispense0"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:background="@drawable/ed_shape"
                android:drawableLeft="@mipmap/icon_search"
                android:drawablePadding="15dp"
                android:hint="输入人名的首字母搜索"
                android:maxLines="1"
                android:paddingLeft="13dp"
                android:paddingRight="10dp"
                android:singleLine="true"
                android:textColor="#1F1F1F"
                android:textColorHint="#BFBFBF"
                android:textSize="16sp"
                tools:ignore="HardcodedText,RtlHardcoded" />

            <ImageView
                android:id="@+id/imClearInput0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:contentDescription=""
                android:padding="10dp"
                android:src="@mipmap/icon_cha"
                android:visibility="gone"
                tools:ignore="ContentDescription,RtlHardcoded" />
        </RelativeLayout>

        <TextView
            android:id="@+id/one_key_drug"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:background="@drawable/selector_circler_orange"
            android:gravity="center"
            android:maxEms="5"
            android:minEms="5"
            android:text="一键发药"
            android:textColor="@color/color_white"
            android:textSize="16sp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/drug_choose_top"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:background="@drawable/shape_coners_white_no_circle"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/drug_time_top"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:gravity="center_vertical"
                android:maxEms="7"
                android:minEms="7"
                android:text="所有"
                android:textColor="@color/color_black_333333"
                android:textSize="16sp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/drug_arrow_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="13.8dp"
                android:src="@mipmap/ic_keyboard_arrow_down_black_18dp" />
        </LinearLayout>
    </LinearLayout>


    <com.jhzy.receptionevaluation.widget.NoScrollViewPager
        android:id="@+id/vpDispense0"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />


    <LinearLayout
        android:id="@+id/bottom_func_complete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnDispensing0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="13dp"
            android:paddingTop="13dp"
            android:text="@string/txtUnCompleted"
            android:textColor="@drawable/selector_text_btn"
            android:textSize="17sp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/btnDispensed0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="13dp"
            android:paddingTop="13dp"
            android:text="@string/txtCompleted"
            android:textColor="@drawable/selector_text_btn"
            android:textSize="17sp"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_func"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="6dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="6dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/select_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:drawableLeft="@drawable/selector_drug_check"
            android:drawablePadding="5dp"
            android:maxEms="6"
            android:minEms="6"
            android:text="取消全选"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/drug_choose"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:background="@drawable/shape_coners_white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/drug_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:text="所有"
                android:textColor="@color/color_black_333333"
                android:textSize="16sp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/drug_arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="13.8dp"
                android:src="@mipmap/ic_keyboard_arrow_down_black_18dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/medicine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_circler_green"
            android:clickable="true"
            android:enabled="false"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:text="发药"
            android:textColor="@color/color_white"
            android:textSize="16sp"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>


</LinearLayout>
